@@ -2,18 +2,19 @@ package com.java.system.agent.capability.planning;
 
 import com.java.system.agent.capability.spi.CapabilityExecutionContext;
 import com.java.system.agent.capability.spi.CapabilityExecutor;
-import com.java.system.agent.runtime.domain.action.AgentAction;
-import com.java.system.agent.runtime.domain.capability.CapabilityPolicy;
-import com.java.system.agent.runtime.port.out.AgentActionProposal;
-import com.java.system.agent.runtime.port.out.AgentActionContractException;
-import com.java.system.agent.runtime.port.out.AgentPromptContext;
-import com.java.system.agent.runtime.port.out.CapabilityCatalogPort;
-import com.java.system.agent.runtime.port.out.CapabilityExecutionContractException;
-import com.java.system.agent.runtime.port.out.CapabilityExecutionResult;
-import com.java.system.agent.runtime.port.out.CapabilityInvocation;
-import org.springframework.ai.chat.messages.AssistantMessage;
-import org.springframework.ai.tool.ToolCallback;
+import com.java.system.agent.answering.domain.action.AgentAction;
+import com.java.system.agent.answering.domain.capability.CapabilityPolicy;
+import com.java.system.agent.answering.port.out.AgentActionProposal;
+import com.java.system.agent.answering.port.out.AgentActionContractException;
+import com.java.system.agent.answering.port.out.AgentPromptContext;
+import com.java.system.agent.answering.port.out.CapabilityCatalogPort;
+import com.java.system.agent.answering.port.out.CapabilityExecutionContractException;
+import com.java.system.agent.answering.port.out.CapabilityExecutionResult;
+import com.java.system.agent.answering.port.out.CapabilityInvocation;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -29,18 +30,18 @@ public final class PlanningToolRegistry implements CapabilityCatalogPort {
 
     private static final Pattern TOOL_NAME = Pattern.compile("[a-z][a-z0-9_]*");
 
+    private final List<PlanningToolRegistration<?>> registrations;
     private final Map<String, PlanningToolRegistration<?>> planningRegistrations;
     private final Map<CapabilityIdentity, QueryPlanningToolRegistration<?, ?>> queryRegistrations;
     private final StrictPlanningToolDecoder decoder;
     private final CanonicalCapabilityPayloadCodec payloadCodec;
 
     public PlanningToolRegistry(
-            List<? extends PlanningToolRegistration<?>> registrations,
+            List<PlanningToolProvider> providers,
             StrictPlanningToolDecoder decoder,
-            CanonicalCapabilityPayloadCodec payloadCodec,
-            PlanningToolSchemaFactory schemaFactory) {
-        RegistrationIndex index = index(registrations, Objects.requireNonNull(
-                schemaFactory, "planning schema factory must not be null"));
+            CanonicalCapabilityPayloadCodec payloadCodec) {
+        RegistrationIndex index = index(providers);
+        this.registrations = index.registrations();
         this.planningRegistrations = index.planningRegistrations();
         this.queryRegistrations = index.queryRegistrations();
         this.decoder = Objects.requireNonNull(decoder, "planning tool decoder must not be null");
@@ -49,26 +50,32 @@ public final class PlanningToolRegistry implements CapabilityCatalogPort {
 
     @Override
     public List<CapabilityPolicy> availableCapabilities() {
-        return queryRegistrations.values().stream().map(QueryPlanningToolRegistration::policy).toList();
+        return queryRegistrations.values().stream().map(queryRegistration -> queryRegistration.policy()).toList();
     }
 
-    public List<ToolCallback> issuedCallbacks(AgentPromptContext context) {
+    /**
+     * 回傳依 provider-facing 名稱排序的不可變 planning registration
+     */
+    public List<PlanningToolRegistration<?>> registrations() {
+        return registrations;
+    }
+
+    public List<PlanningToolRegistration<?>> issuedRegistrations(AgentPromptContext context) {
         Objects.requireNonNull(context, "agent prompt context must not be null");
-        return planningRegistrations.values().stream()
+        return registrations.stream()
                 .filter(registration -> registration.isIssued(context))
-                .map(PlanningToolRegistration::callback)
                 .toList();
     }
 
-    public AgentActionProposal interpretToolCall(AssistantMessage.ToolCall toolCall, AgentPromptContext context) {
+    public AgentActionProposal interpretToolCall(String toolName, String rawArguments, AgentPromptContext context) {
         try {
-            Objects.requireNonNull(toolCall, "tool call must not be null");
+            Objects.requireNonNull(toolName, "tool name must not be null");
             Objects.requireNonNull(context, "agent prompt context must not be null");
-            PlanningToolRegistration<?> registration = planningRegistrations.get(toolCall.name());
+            PlanningToolRegistration<?> registration = planningRegistrations.get(toolName);
             if (Objects.isNull(registration) || !registration.isIssued(context)) {
                 return new AgentActionProposal.Malformed("MALFORMED_ACTION_RESPONSE");
             }
-            return new AgentActionProposal.Proposed(interpret(registration, toolCall.arguments(), context));
+            return new AgentActionProposal.Proposed(interpret(registration, rawArguments, context));
         } catch (PlanningToolInputException exception) {
             return new AgentActionProposal.Malformed("INVALID_TOOL_INPUT");
         } catch (AgentActionContractException exception) {
@@ -89,9 +96,9 @@ public final class PlanningToolRegistry implements CapabilityCatalogPort {
             Class<E> executionInputType,
             QueryPlanningMapper<P, E> mapper,
             CapabilityExecutor<E> executor,
-            PlanningToolSchemaFactory schemaFactory) {
+            CanonicalCapabilityPayloadCodec payloadCodec) {
         return new QueryPlanningToolRegistration<>(
-                policy, planningInputType, executionInputType, mapper, executor, schemaFactory);
+                policy, planningInputType, executionInputType, mapper, executor, payloadCodec);
     }
 
     private <I> AgentAction interpret(
@@ -99,7 +106,7 @@ public final class PlanningToolRegistry implements CapabilityCatalogPort {
             String rawInput,
             AgentPromptContext context) {
         I planningInput = decoder.decode(rawInput, registration.planningInputType());
-        return registration.toAction(planningInput, context, payloadCodec);
+        return registration.toAction(planningInput, context);
     }
 
     private <E> CapabilityExecutionResult executeTyped(
@@ -127,40 +134,56 @@ public final class PlanningToolRegistry implements CapabilityCatalogPort {
         return registration;
     }
 
-    private static RegistrationIndex index(
-            List<? extends PlanningToolRegistration<?>> values,
-            PlanningToolSchemaFactory schemaFactory) {
-        Objects.requireNonNull(values, "planning registrations must not be null");
+    private static RegistrationIndex index(List<PlanningToolProvider> providers) {
+        Objects.requireNonNull(providers, "planning tool providers must not be null");
+        List<PlanningToolRegistration<?>> values = registrations(providers);
         Map<String, PlanningToolRegistration<?>> planningRegistrations = new LinkedHashMap<>();
         Map<CapabilityIdentity, QueryPlanningToolRegistration<?, ?>> queryRegistrations = new LinkedHashMap<>();
         Set<String> names = new HashSet<>();
         for (PlanningToolRegistration<?> registration : values) {
             PlanningToolRegistration<?> required = Objects.requireNonNull(
                     registration, "planning registration must not contain null");
-            schemaFactory.verifyRegisteredSchema(required.planningInputType(),
-                    required.callback().getToolDefinition().inputSchema());
-            if (!TOOL_NAME.matcher(required.name()).matches()) {
-                throw new IllegalArgumentException("planning tool name must be canonical lowercase underscore text");
-            }
-            if (!names.add(required.name())) {
-                throw new IllegalArgumentException("planning registrations must have unique tool names");
-            }
-            planningRegistrations.put(required.name(), required);
             if (required instanceof QueryPlanningToolRegistration<?, ?> queryRegistration) {
                 CapabilityIdentity identity = new CapabilityIdentity(queryRegistration.policy().name(),
                         queryRegistration.policy().version());
                 if (Objects.nonNull(queryRegistrations.putIfAbsent(identity, queryRegistration))) {
-                    throw new IllegalArgumentException("planning registrations must have unique capability name and version");
+                    throw new IllegalArgumentException("duplicate QUERY identity in planning registrations");
                 }
             }
         }
-        return new RegistrationIndex(Map.copyOf(planningRegistrations), Map.copyOf(queryRegistrations));
+        for (PlanningToolRegistration<?> registration : values) {
+            PlanningToolRegistration<?> required = Objects.requireNonNull(
+                    registration, "planning registration must not contain null");
+            if (!TOOL_NAME.matcher(required.name()).matches()) {
+                throw new IllegalArgumentException("planning tool name must be canonical lowercase underscore text");
+            }
+            if (!names.add(required.name())) {
+                throw new IllegalArgumentException("duplicate provider-facing name in planning registrations");
+            }
+            planningRegistrations.put(required.name(), required);
+        }
+        return new RegistrationIndex(values, Collections.unmodifiableMap(planningRegistrations),
+                Collections.unmodifiableMap(queryRegistrations));
+    }
+
+    private static List<PlanningToolRegistration<?>> registrations(List<PlanningToolProvider> providers) {
+        List<PlanningToolRegistration<?>> registrations = new ArrayList<>();
+        for (PlanningToolProvider provider : providers) {
+            PlanningToolProvider requiredProvider = Objects.requireNonNull(provider,
+                    "planning tool providers must not contain null");
+            List<PlanningToolRegistration<?>> providedRegistrations = Objects.requireNonNull(
+                    requiredProvider.registrations(), "planning tool provider registrations must not be null");
+            registrations.addAll(providedRegistrations);
+        }
+        registrations.sort(Comparator.comparing(planningToolRegistration -> planningToolRegistration.name()));
+        return List.copyOf(registrations);
     }
 
     private record CapabilityIdentity(String name, String version) {
     }
 
     private record RegistrationIndex(
+            List<PlanningToolRegistration<?>> registrations,
             Map<String, PlanningToolRegistration<?>> planningRegistrations,
             Map<CapabilityIdentity, QueryPlanningToolRegistration<?, ?>> queryRegistrations) {
     }
